# libnss_compat

./: NEWS  README  configure.ac
src/: Makefile.am  compat-grp.c  compat-initgroups.c  compat-pwd.c  compat-spwd.c  libnss_compat.map  nss_loader-test.c
